1. Add a empty .emulator_console_auth_token 2. Export 5037 port for adb server

--- a/container/etc/supervisor/conf.d/supervisord.conf
+++ b/container/etc/supervisor/conf.d/supervisord.conf
@@ -4,12 +4,19 @@ nodaemon=true
 [program:emulator]
 command=/bin/bash -c "$ANDROID_HOME/tools/emulator -avd ${NAME} -no-window -no-audio ${ANDROID_EMULATOR_EXTRA_ARGS}"
 stopsignal=KILL
+startretries=3
 
 [program:socat-5554]
 command=/usr/local/bin/socat.sh 5554
 
 [program:socat-5555]
 command=/usr/local/bin/socat.sh 5555
+
+[program:socat-5037]
+command=/usr/local/bin/socat.sh 5037 
+
+[program:socat-9008]
+command=/usr/local/bin/socat.sh 9008 
 
 [program:novnc]
 command=/bin/bash -c '[ "_$noVNC" = "_true" ] && /home/user/noVNC/utils/launch.sh --vnc localhost:5900'
