Add pulseaudio package

--- a/container/etc/supervisor/conf.d/supervisord.conf
+++ b/container/etc/supervisor/conf.d/supervisord.conf
@@ -18,6 +18,9 @@ command=/usr/local/bin/socat.sh 5037
 [program:socat-9008]
 command=/usr/local/bin/socat.sh 9008 
 
+[program:socat-5900]
+command=/usr/local/bin/socat.sh 5900 
+
 [program:novnc]
 command=/bin/bash -c '[ "_$noVNC" = "_true" ] && /home/user/noVNC/utils/launch.sh --vnc localhost:5900'
 startretries=0
